# aws-tools

./: aws-clone-bucket.py  aws-ec2-list.py  aws-manage-users.py  aws-nuke-bucket.py  aws-nuke-rds.py  aws-regions.py  aws-s3-pipe-upload.sh  awsenv-vault-exec.sh  awsenv.py  awsenv3.py  install.sh  manifest.txt  pyproject.toml  toggle_install.sh  uninstall.sh  venv-bashrc  venv-exec
