[tool.poetry]
name = "aws-tools"
version = "0.1.0"
description = ""
authors = ["Jan Święcki <jan.swiecki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
awscli = "^1.19.21"
PyYAML = "^5.4.1"
docopt = "^0.6.2"
boto3 = "^1.17.21"
csvkit = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
